Prevent wrap of inline source code

--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -13,6 +13,7 @@ blockquote {
 }
 
 p > code.language-text {
+  white-space: nowrap;
   padding-top: .1em;
   padding-bottom: .1em;
   padding-left: .4em;
